--- a/apps/src/assets/css/base.css
+++ b/apps/src/assets/css/base.css
@@ -5,3 +5,20 @@ a:link{
     color:#000000;
     text-decoration: none;
 }
+table {
+    background-color: transparent;
+    }
+    table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    }
+
+    li {
+        line-height: 20px;
+        }
+        .avatar img {
+            width: 100%;
+            height: 100%;
+            border: 1px solid #ddd;
+            border-radius: 50%;
+            }
